# etl

./: .gitignore  pyproject.toml
etl/: __init__.py  config.py
etl/extract/: __init__.py
etl/load/: __init__.py
etl/transform/: __init__.py  feature_enginnering.py  preprocess.py
tests/: test_etl.py  test_extract.py
