[tool.poetry]
name = "dublin-data-etl"
version = "0.1.0"
description = ""
authors = ["Saci <saciperere@riseup.net>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.3.4"
matplotlib = "^3.5.0"
bokeh = "^2.4.2"
sklearn = "^0.0"
geopandas = "^0.10.2"
pygeos = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
python-lsp-server = {extras = ["all"], version = "^1.3.2"}
black = "^21.12b0"
isort = "^5.10.1"
autoflake = "^1.4"
pytest-cov = "^3.0.0"
pyls-flake8 = "^0.4.0"
mypy-ls = "^0.5.1"
pyls-isort = "^0.2.2"
python-lsp-black = "^1.0.1"
pyls-memestra = "^0.0.15"
pylsp-rope = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
